fixed issue where scroll bar would show up when content doesn't overflow

--- a/src/pages/PastSessions/PastSessions.css
+++ b/src/pages/PastSessions/PastSessions.css
@@ -6,7 +6,7 @@
     flex: 1;
     width: 100%;
 
-    overflow-y: scroll;
+    overflow-y: auto;
 
     /* Ensure scrollbars are visible */
     scrollbar-width: thin; /* For Firefox */
